# fusio

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
apps/desktop/: AGENT7_DONE.md  index.html  package.json  tailwind.config.js
apps/desktop/.github/workflows/: release.yml
apps/desktop/scripts/: generate-icons.py  setup.sh
apps/desktop/src/: App.tsx  global.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/docker/: Dockerfile.browser
apps/desktop/src-tauri/src/: deps.rs  keystore.rs  lib.rs  main.rs  session_capture.rs  worker.rs
apps/desktop/src/components/: DependencyPanel.tsx  EarningsWidget.tsx  JobCard.tsx  LiveSessionView.tsx  StatusBadge.tsx
apps/desktop/src/hooks/: useConnectionStatus.ts  useDependencyCheck.ts  useOrchestrator.ts  useSessionStatus.ts  useWallet.ts  (+2 more)
apps/website/: download.html
docs/: cua-vm-playwright-analysis.md
scripts/: build-all.sh  fetch-bundled-deps.sh  start-all.sh  stop-all.sh
services/orchestrator/: .env.example  AGENT3_DONE.md  package.json
services/orchestrator/src/: index.ts
services/vault/: .env.example  AGENT5_DONE.md  package.json
services/vault/src/: client.ts  health.ts  index.ts  tokens.ts
services/vault/vault-config/: bootstrap.sh  policy-orchestrator.hcl  policy-worker.hcl
services/worker-node/: .env.example  AGENT4_DONE.md  package.json  tsconfig.json
services/worker-node/scripts/: build-image.sh
services/worker-node/src/: health.ts  index.ts  receipt.ts  runner.ts
tests/: e2e-test.ts  tsconfig.json
(+41 files in other folders)
